examples/test/testpolicy6463.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6463
  namespace: namespace435
spec:
  podSelector:
    matchLabels:
      key39: value24
      key40: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value27
          key34: value37
      podSelector:
        matchLabels:
          key22: value18
          key1: value5
          key11: value42
